[package]
name = "withings-rs"
version = "0.1.0"
edition = "2021"
author = "Quenten Griffith"
description = "Withings API Client lib"
license = "MIT"
keywords = ["withings", "client", "api"]
readme = "README.md"
repository = "https://github.com/qgriffith/withings-rs"
homepage = "https://github.com/qgriffith/withings-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"]}
tokio = { version = "1.35.1", features = ["full"] }
tiny_http = "0.12.0"
url = "2.2.2"
random-string = "1.1.0"
log = "0.4.20"
serde_json = "1.0.111"