[package]
name = "withings-rs"
version = "0.1.2"
edition = "2021"
author = "Quenten Griffith <qgriffith@gmail.com>"
description = "Withings API Client lib"
license = "MIT"
keywords = ["withings", "client", "api"]
readme = "README.md"
repository = "https://github.com/qgriffith/withings-rs"
homepage = "https://github.com/qgriffith/withings-rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
tiny_http = "0.12.0"
random-string = "1.1.0"
log = "0.4.25"
serde_json = "1.0.135"